Configure eslint and pre-commit linting commit

--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,44 @@
-# compiled output
+# output
 /dist
-/node_modules
 
-# Logs
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+/.nyc_output
+
+# misc
+.DS_Store
+*.pem
+
+# log files
 logs
 *.log
 npm-debug.log*
 pnpm-debug.log*
+.pnpm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
 
-# OS
-.DS_Store
+# diagnostic reports (https://nodejs.org/api/report.html)
+report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
-# Tests
-/coverage
-/.nyc_output
+# env files
+.env*.local
+.env
+.env.test
+.env.dev
+.env.prod
 
-# IDEs and editors
+# lock files
+package-lock.json
+yarn.lock
+
+# ide files
 /.idea
 .project
 .classpath
@@ -26,10 +46,11 @@ lerna-debug.log*
 *.launch
 .settings/
 *.sublime-workspace
-
-# IDE - VSCode
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+
+# eslint
+.eslintcache
