--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/sequelize": "^9.0.0",
     "@nestjs/swagger": "^6.2.1",
     "@types/uuid": "^9.0.0",
     "colors": "^1.4.0",
