fix-#861mg2mv4/add custom exception

--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@adminjs/express": "^5.1.0",
+    "@adminjs/nestjs": "^5.1.1",
+    "@adminjs/sequelize": "^3.0.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.0.0",
@@ -29,13 +32,17 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/sequelize": "^9.0.0",
     "@nestjs/swagger": "^6.2.1",
+    "@tiptap/pm": "^2.0.1",
     "@types/passport-jwt": "^3.0.8",
     "@types/uuid": "^9.0.0",
+    "adminjs": "^6.8.7",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "colors": "^1.4.0",
     "dotenv": "^16.0.3",
+    "express-formidable": "^1.2.0",
+    "express-session": "^1.17.3",
     "joi": "^17.7.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
